# 2021-star

./: .enedis-prod.pubkey  .enedis-staging.pubkey  .enedis-testing.pubkey  .gitignore  .gitlab-ci.yml  .producer-prod.pubkey  .producer-staging.pubkey  .producer-testing.pubkey  .rte-prod.pubkey  .rte-staging.pubkey  .rte-testing.pubkey  CMD.md  Earthfile  README.md  Tiltfile  docker-compose-fabric-orderer.yaml  docker-compose-fabric-tso.yaml  package-lock.json  prepare-prod.sh  prepare-staging.sh  prepare-testing.sh  sonar-project.properties  test.sh
Automatic test/: Selenium test 0.1
backend/: Dockerfile  Earthfile  README.md  pom.xml
chaincode/: .gitignore  Dockerfile  Earthfile  ReadMe.MD  chaincode.env  package-lock.json  package.json  tslint.json
fabric-network/: docker-compose-fabric-dso.yaml  docker-compose-fabric-orderer.yaml  docker-compose-fabric-third.yaml  docker-compose-fabric-tso.yaml
frontend/: .earthignore  Dockerfile  Earthfile  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.json
helm/: .earthignore  Earthfile
hlf/: ccp-generate.sh  configtx.yaml  crypto-config.yaml
infrastructure/: velero-prod.sh  velero.sh
keycloak/: Dockerfile  Earthfile
old-poc/: CMD.md  CMD2.md  CMD3.md
terraform/: .terraform.lock.hcl  age.tf  backend.tf  cert-manager.tf  github.tf  ingress.tf  locals.tf  logs.tf  main.tf  monitoring.tf  namespace.tf  network.tf  terraform.tfvars  variables.tf
test/: Automatique Test Enedis Staging  (+2 more)
test/e2e/: .earthignore  .gitignore  Earthfile  README.md  conftest.py  pyproject.toml  pytest.ini  smoke.py
(+1251 files in other folders)
